--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.android.gms:play-services-vision:10.2.6'
     testCompile 'junit:junit:4.12'
+    compile files('libs/google-api-translate-java-0.97.jar')
+    compile files('libs/google-api-client-android-1.23.0.jar')
+    compile files('libs/google-http-client-android-1.23.0.jar')
 }
+
+
